--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -18,3 +18,13 @@
 img{
     margin: 0 5px;
 }
+
+.dropbtn {
+    display: flex;
+    background-color: transparent;
+    color:darkgray;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
