--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container style="height: 100%;" class="example-container mat-typography" autosize>
+<mat-drawer-container style="height: 100%;position: absolute;top: 0;left: 0;" class="example-container mat-typography" autosize>
     <mat-drawer 	#sidenav
           mode="side"
           class="example-sidenav"
@@ -31,5 +31,6 @@
         </mat-list-item>
       </mat-nav-list>
     </mat-drawer>
+  
   </mat-drawer-container>
 
