--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,18 +7,18 @@
           (mouseenter)="increase()"
           (mouseleave)="decrease()"  #drawer mode="side" disableClose="true" opened="true">
       <mat-nav-list>
-        <mat-list-item>
-         <img *ngIf="sidenavWidth > 7" src="../../assets/icons/Group 15928.svg">
-         <img *ngIf="!(sidenavWidth > 7)" src="../../assets/icons/Group 16009.svg">
+        <mat-list-item style="color: white;">
+         <h1 class="sr-title" *ngIf="sidenavWidth > 7">Shiprocket</h1>
+         <h1 class="sr-title" *ngIf="!(sidenavWidth > 7)">SR</h1>
         </mat-list-item>
       </mat-nav-list>  
       <mat-nav-list *ngIf="showMenu">
         <mat-list-item class="menu-item" >
-          <img mat-list-icon src="../../assets/icons/Group 16015.svg">
+          <mat-icon mat-list-icon>home</mat-icon>
           <h4 mat-line *ngIf="sidenavWidth > 7">Home</h4>
         </mat-list-item>
         <mat-list-item class="menu-item">
-          <img mat-list-icon src="../../assets/icons/Group 16005.svg">
+          <mat-icon mat-list-icon>dashboard</mat-icon>
           <h4 mat-line *ngIf="sidenavWidth > 7">Dashboard</h4>
         </mat-list-item>
         <mat-list-item class="menu-item">
