--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,3 +61,12 @@ input[type=text], select {
     border-radius: 4px;
     box-sizing: border-box;
   }
+
+  .header-icon{
+      color: lightgray;
+      margin: 0 10px 0 0;
+  }
+
+  .sr-title{
+      margin: 0 !important;
+  }
