Added Input Added common service Refactored code

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,2 @@
-<app-header *ngIf="isToken"></app-header>
-<app-sidebar *ngIf="isToken"></app-sidebar>
+<app-header *ngIf="details.token" ></app-header>
+<app-sidebar *ngIf="details.token"></app-sidebar>
