--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<!-- <app-home></app-home>
-<div style="margin-left: 6.5em;">hello 
-    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div> -->
+<!-- <app-home [details]="details"></app-home> -->
