--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,40 +1,44 @@
-mat-drawer{
-    background-color: #06064d;
-    padding: 0 2% 2% 1%;
-}
-mat-icon{
-    color:#6964e2;
-}
-h4{
+$background: #06064d;
+$color1: #6964e2;
+
+// .mat-drawer-inner-container {
+//   overflow: hidden;
+// }
+
+::ng-deep .sidenav {
+  background-color: $background !important;
+  padding: 0 2% 2% 1%;
+
+  .mat-list-item-content {
+    padding: 0 12px 0 12px !important;
+  }
+
+  mat-icon {
+    color: $color1;
+  }
+
+  h4 {
     font-size: 14px !important;
-   // color: white;
-}
+  }
 
-mat-list-item{
-    color: white;
+  mat-list-item {
+    color: white !important;
     margin-bottom: 10%;
-}
-
-.menu-item{
-    color: white;
-}
-
-.menu-item:hover{
-    color: #06064d;
-    background-color: white;
-    border-radius: 10px;
-}
-
-:host ::ng-deep .mat-list-item-content {
-     padding: 0 12px 0 12px!important;
-}
-
-.mat-list-item.active{
-    background-color: white;
-    border-radius: 10px;
-    color: #06064d;
   }
 
-  .mat-drawer-inner-container{
-      overflow: hidden;
+  .menu-item {
+    color: white !important;
   }
+
+  .menu-item:hover {
+    color: $background !important;
+    background-color: white !important;
+    border-radius: 10px;
+  }
+
+  .mat-list-item.active {
+    background-color: white;
+    border-radius: 10px;
+    color: $background;
+  }
+}
